add chc-tools back as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SpacerProseBackend"]
 	path = SpacerProseBackend
 	url = git@github.com:aishr/SpacerProseBackend.git
+[submodule "chc-tools"]
+	path = chc-tools
+	url = git@github.com:chc-comp/chc-tools.git
